
News
---------------------------------------------------------

Version 0.3-5
  * In `plotxc`, can chop off long tails for scatterplot/2-d histogram,
    controlled by `trim` parameter.
  * pass plotting parameters for models from top-level `ceplot` call. See
    parameter `modelpar`.
  * allow `xlim` and `ylim` to be passed to section plot produced by `plotxs`.
  * corrected typo in `?similarityweight`, sigma --> threshold.
  * corrected problem in `condtour`, where interpolated path omitted the final
    row. Also removed rownames from cluster centres.

Version 0.3-4 2016-08-04
  * fixed incorrect parameter names in demo files.
  * fix to `plotxs` to allow `main` and `mar` to be specified.

Version 0.3-3 2016-07-04
  * fixed treatment of `pch` by condtour, was previously defaulting to 1 when it
    should have been 21 for background colours.
  * can now adjust `threshold` while using `condtour`.
  * added help link for `rsconnect` package in Shiny application.
  * added fix to `update.xsplot` where the fitted model was not updating
    properly, due to the section information remaining static.

Version 0.3-2
  * fixed bug with `rep` for `col` and `pch` where `length.out` was omitted,
    causing huge delays for `plotxs`.

Version 0.3-1
  * removed test which timed `similarityweight` (for CRAN)

Version 0.3-0 2016-07-01
  * removed daisy distance measure, and relevant contributors.
  * renamed `visualweight` to `similarityweight` and changed parameter names.
  * renamed parameters in `ceplot`.
  * Shiny implementation completely rewritten, see R/ceplot.shiny.R.
  * added Roxygen comments for documentation of exported functions.
  * added update methods to parallel coordinates and scatterplot matrix
    condition selector plots.
  * `condtour` can now handle mixed data (categorical and continuous).

Version 0.2-2 2016-05-01
  * updated contributors for copied code.
  * added simple example to README.

Version 0.2-1 23 Feb 2016
  * initial release on CRAN.