@@ -11,6 +11,9 @@ Version 0.3-5
     parameter `modelpar`.
   * allow `xlim` and `ylim` to be passed to section plot produced by `plotxs`.
   * corrected typo in `?similarityweight`, sigma --> threshold.
+  * changed treatment of conditioning variables in `condtour` to be more like
+    `ceplot`, plus a hacky fix to `update.xcplot` for `condtour` providing
+    predictor values instead of mouseclicks.
   * corrected problem in `condtour`, where interpolated path omitted the final
     row. Also removed rownames from cluster centres.
 
